# DashBoard

./: README.md
DashBoard/: CMakeLists.txt
DashBoard/Config/: Project.ini
DashBoard/Config/Databases/: bootconf.db
DashBoard/Script/Install/: Install.py
DashBoard/Src/Insight/: CMakeLists.txt  main.cpp
DashBoard/Src/Insight/Global/: globallog.cpp  globallog.h  runlog.cpp  runlog.h
DashBoard/Src/Insight/Model/: processmodel.cpp
DashBoard/Src/Insight/Model/ModelImpl/: modelimpl.h
DashBoard/Src/Insight/Qml/: Main.qml  qml.qrc
DashBoard/Src/Insight/Qml/Component/: StatusBar.qml
DashBoard/Src/Insight/Qml/View/: AboutView.qml  ProcessThread.qml  ProcessView.qml  SystemAll.qml
DashBoard/Src/Insight/Service/: controlservice.cpp  controlservice.h  netservice.cpp  netservice.h  sqlservice.cpp  sqlservice.h  updateservice.cpp  updateservice.h
DashBoard/Src/Insight/Service/ServiceImpl/: serviceimpl.h
DashBoard/Src/Insight/Utils/: utils.cpp  utils.h
DashBoard/Src/Launcher/: CMakeLists.txt  main.cpp
DashBoard/Src/Launcher/Qml/: Main.qml  qml.qrc
DashBoard/Src/Upload/: CMakeLists.txt
